fix: zoneless completed

--- a/projects/aas-lib/src/lib/aas-table/aas-table.component.html
+++ b/projects/aas-lib/src/lib/aas-table/aas-table.component.html
@@ -7,7 +7,7 @@
  !---------------------------------------------------------------------------->
 
 @if (rows().length > 0) {
-@if (viewMode === 'list') {
+@if (viewMode() === 'list') {
 <table class="table table-sm table-hover table-striped">
     <thead>
         <tr>
