--- a/projects/aas-lib/src/lib/digital-nameplate/digital-nameplate.component.html
+++ b/projects/aas-lib/src/lib/digital-nameplate/digital-nameplate.component.html
@@ -6,7 +6,7 @@
  !
  !---------------------------------------------------------------------------->
 
-@for (nameplate of nameplates; track nameplate) {
+@for (nameplate of nameplates(); track nameplate) {
   <div class="container border rounded">
     <div class="row">
       <div class="col">
