--- a/projects/aas-portal/src/app/aas/aas.component.html
+++ b/projects/aas-portal/src/app/aas/aas.component.html
@@ -55,7 +55,8 @@
             <option [ngValue]="page">{{page.name}}</option>
             }
         </select>
-        <button type="button" class="btn btn-primary" (click)="addToDashboard('Line')" [disabled]="!canAddToDashboard()">
+        <button type="button" class="btn btn-primary" (click)="addToDashboard('Line')"
+            [disabled]="!canAddToDashboard()">
             <i class="bi bi-graph-up"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="addToDashboard('BarVertical')"
@@ -70,23 +71,24 @@
         </button>
     </div>
     <div class="btn-group me-2">
-        <button type="button" class="btn btn-primary" (click)="downloadDocument().subscribe">
+        <button type="button" class="btn btn-primary" (click)="downloadDocument().subscribe()">
             <i class="bi bi-download"></i>
         </button>
     </div>
     <div class="btn-group me-2" [hidden]="readOnly()">
         <button type="button" class="btn btn-primary" (click)="undo()" [disabled]="canUndo === false">
-            <i class="bi bi-arrow-90deg-left"></i>
+            <i class="bi bi-arrow-counterclockwise"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="redo()" [disabled]="canRedo === false">
-            <i class="bi bi-arrow-90deg-right"></i>
+            <i class="bi bi-arrow-clockwise"></i>
         </button>
     </div>
     <div class="btn-group me-2" [hidden]="readOnly()">
-        <button type="button" class="btn btn-primary" (click)="newElement().subscribe()" [disabled]="!canNewElement">
+        <button type="button" class="btn btn-primary" (click)="newElement().subscribe()" [disabled]="!canNewElement()">
             <i class="bi bi-plus-lg"></i>
         </button>
-        <button type="button" class="btn btn-primary" (click)="editElement().subscribe()" [disabled]="!canEditElement">
+        <button type="button" class="btn btn-primary" (click)="editElement().subscribe()"
+            [disabled]="!canEditElement()">
             <i class="bi bi-pencil"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="deleteElement().subscribe()"
