--- a/projects/aas-portal/src/app/aas/edit-element-form/edit-element-form.component.html
+++ b/projects/aas-portal/src/app/aas/edit-element-form/edit-element-form.component.html
@@ -10,12 +10,12 @@
   <div class="modal-header">
     <h4 class="modal-title text-info">
       <i class="bi bi-pencil"></i>
-      <span class="ms-2">{{modelType}}</span>
+      <span class="ms-2">{{modelType()}}</span>
     </h4>
     <button type="button" class="btn-close" (click)="cancel()"> </button>
   </div>
   <div class="modal-body">
-    @for (message of messages; track message) {
+    @for (message of messages(); track message) {
       <ngb-toast [autohide]="false" class="bg-danger w-100 mb-3">
         <div class="d-flex">
           <div class="flex-grow-1">{{ message }}</div>
@@ -35,16 +35,16 @@
         <div class="form-floating mb-3">
           <select #selectCategory class="form-select form-control-sm" id="selectCategory" [(ngModel)]="category"
             name="category">
-            @for (item of categories; track item) {
+            @for (item of categories(); track item) {
               <option [ngValue]="item">{{item}}</option>
             }
           </select>
           <label for="selectCategory" translate>LABEL_CATEGORY</label>
         </div>
-        @if (modelType === 'Property') {
+        @if (modelType() === 'Property') {
           <div class="form-floating mb-3">
             <select class="form-select" id="selectValueType" [(ngModel)]="valueType" name="valueType">
-              @for (item of valueTypes; track item) {
+              @for (item of valueTypes(); track item) {
                 <option [ngValue]="item">{{item}}</option>
               }
             </select>
@@ -56,7 +56,7 @@
               <label for="inputValue" translate>LABEL_VALUE</label>
             </div>
           }
-          @if (modelType === 'MultiLanguageProperty') {
+          @if (modelType() === 'MultiLanguageProperty') {
             <div class="container px-0">
               <div class="row">
                 <div class="col-12 small text-secondary" translate>LABEL_VALUE</div>
@@ -71,7 +71,7 @@
                       <th [style.width.px]="16"></th>
                     </thead>
                     <tbody>
-                      @for (langString of langStrings; track langString) {
+                      @for (langString of langStrings(); track langString.language) {
                         <tr>
                           <td>
                             <input type="checkbox" class="form-check-input" [checked]="langString.selected"
@@ -119,10 +119,10 @@
                 </div>
               </div>
             }
-            @if (modelType === 'Range') {
+            @if (modelType() === 'Range') {
               <div class="form-floating mb-3">
                 <select class="form-select" id="selectValueType" [(ngModel)]="valueType" name="valueType">
-                  @for (item of valueTypes; track item) {
+                  @for (item of valueTypes(); track item) {
                     <option [ngValue]="item">{{item}}</option>
                   }
                 </select>
@@ -136,7 +136,7 @@
                   <label for="inputValue" translate>LABEL_MAX</label>
                 </div>
               }
-              @if (modelType === 'Blob') {
+              @if (modelType() === 'Blob') {
                 <div class="form-floating mb-3">
                   <input id="inputValue" type="text" class="form-control form-control-sm" [(ngModel)]="contentType"
                     name="contentType" placeholder="MIME type">
