--- a/projects/aas-lib/src/lib/aas-tree/show-image-form/show-image-form.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/show-image-form/show-image-form.component.html
@@ -9,12 +9,12 @@
 <div class="modal-header">
     <h4 class="modal-title text-info">
         <i class="bi bi-image"></i>
-        <span class="ms-2">{{name}}</span>
+        <span class="ms-2">{{name()}}</span>
     </h4>
     <button type="button" class="btn-close" (click)="close()"> </button>
 </div>
 <div class="modal-body">
-    <fhg-img classname="img-fluid" [src]="image" [alt]="name" [width]="600" [height]="400"/>
+    <fhg-img classname="img-fluid" [src]="image()" [alt]="name()" [width]="600" [height]="400"/>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="close()" translate>CMD_CLOSE</button>
