--- a/projects/aas-lib/src/lib/aas-tree/show-video-form/show-video-form.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/show-video-form/show-video-form.component.html
@@ -9,12 +9,12 @@
 <div class="modal-header">
     <h4 class="modal-title text-info">
         <i class="bi bi-film"></i>
-        <span class="ms-2">{{name}}</span>
+        <span class="ms-2">{{name()}}</span>
     </h4>
     <button type="button" class="close" (click)="close()"> </button>
 </div>
 <div class="modal-body">
-    <video width="760" height="570" [src]="video" controls autoplay muted></video>
+    <video width="760" height="570" [src]="video()" controls autoplay muted></video>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-primary" (click)="close()" translate>CMD_CLOSE</button>
