--- a/projects/aas-portal/src/app/about/about.component.html
+++ b/projects/aas-portal/src/app/about/about.component.html
@@ -13,18 +13,18 @@
     <p>Copyright (c) 2019-2024 Fraunhofer IOSB-INA Lemgo, eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
 zur Foerderung der angewandten Forschung e.V.</p>
     <p>
-        <span>Internet:&nbsp;</span><a [href]="homepage" target="_blank">{{homepage}}</a><br>
+        <span>Internet:&nbsp;</span><a [href]="homepage()" target="_blank">{{homepage()}}</a><br>
     </p>
     <h2>AASPortal</h2>
-    <p>Version: {{version}}</p>
+    <p>Version: {{version()}}</p>
     <h2>AAS-Server</h2>
-    <p>Version: {{serverVersion}}</p>
+    <p>Version: {{serverVersion()}}</p>
     <h2>Third-party Libraries</h2>
     <p>The application is based on some third-party libraries for which specific copyright statements and licenses
         apply.</p>
-    <fhg-library-table [collection]="libraries"></fhg-library-table>
+    <fhg-library-table [collection]="libraries()"></fhg-library-table>
     <h2>Server Messages</h2>
-    <fhg-message-table [collection]="messages"></fhg-message-table>
+    <fhg-message-table [collection]="messages()"></fhg-message-table>
 </div>
 
 <ng-template #aboutToolbar></ng-template>
