fix: update to Angular 18

--- a/projects/aas-portal/src/app/start/upload-form/upload-form.component.html
+++ b/projects/aas-portal/src/app/start/upload-form/upload-form.component.html
@@ -29,7 +29,7 @@
       </div>
       @if (progress() > 0) {
         <div class="progress form-group">
-          <div class="progress-bar progress-bar-striped bg-success" role="progressbar" [style.width.%]="progress">
+          <div class="progress-bar progress-bar-striped bg-success" role="progressbar" [style.width.%]="progress()">
           </div>
         </div>
       }
