--- a/projects/aas-lib/src/lib/auth/login-form/login-form.component.html
+++ b/projects/aas-lib/src/lib/auth/login-form/login-form.component.html
@@ -30,14 +30,12 @@
                 placeholder="name">
             <label for="inputLoginPassword" translate>LABEL_PASSWORD</label>
         </div>
-        @if (!passwordPerEMail) {
         <div class="form-check mb-3">
             <label class="form-check-label" for="stayLoggedIn" translate>LABEL_STAY_LOGGED_IN</label>
             <input class="form-check-input" type="checkbox" id="stayLoggedIn" [(ngModel)]="stayLoggedIn"
                 name="stayLoggedIn">
         </div>
-        }
-        @else {
+        @if (passwordPerEMail()) {
         <div class="mb-3">
             <a href="javascript:void(0);" (click)="resetPassword()" translate>CMD_RESET_PASSWORD</a>
         </div>
