--- a/projects/aas-lib/src/lib/aas-table/aas-table.component.html
+++ b/projects/aas-lib/src/lib/aas-table/aas-table.component.html
@@ -27,7 +27,7 @@
         </tr>
     </thead>
     <tbody>
-        @for (row of rows(); track row) {
+        @for (row of rows(); track row.trackId) {
         <tr class="align-middle">
             <td>
                 <input type="checkbox" class="form-check-input" (change)="toggleSelected(row)" [checked]="row.selected"
@@ -89,7 +89,7 @@
         </tr>
     </thead>
     <tbody>
-        @for (row of rows(); track row) {
+        @for (row of rows(); track row.trackId) {
         <tr class="align-middle">
             <td>
                 <input type="checkbox" class="form-check-input" (change)="toggleSelected(row)" [checked]="row.selected"
