--- a/projects/aas-portal/src/app/dashboard/dashboard.component.html
+++ b/projects/aas-portal/src/app/dashboard/dashboard.component.html
@@ -6,11 +6,11 @@
  !
  !---------------------------------------------------------------------------->
 
-<div id="fhg-dashboard-container" class="container">
+<div id="fhg-dashboard-container" class="container-fluid">
     @if (!isEmpty()) {
     @for (row of rows(); track row) {
     <div class="row">
-        @for (column of row.columns; track column) {
+        @for (column of row.columns; track column.id) {
         <div [ngClass]="'col border border-3 rounded m-1 ' + (selected(column) ? 'border-primary' : 'border-secondary')"
             (click)="toggleSelection(column)" (keydown.enter)="toggleSelection(column)" tabindex="0">
             @if (!editMode()) {
