--- a/projects/aas-portal/src/styles.scss
+++ b/projects/aas-portal/src/styles.scss
@@ -20,6 +20,12 @@
     --fhg-123: #8B3F4B;
     --fhg-456: #5EB0BE;
     --fhg-red: #C52523;
+
+    --navbar-height: 48px;
+    --toolbar-height: 48px;
+    --statusbar-height: 24px;
+    --gap-size-1: 4px;
+    --gap-size-2: 8px;
 }
 
 $primary: #009374;
