--- a/projects/aas-portal/src/app/main/main.component.scss
+++ b/projects/aas-portal/src/app/main/main.component.scss
@@ -5,3 +5,33 @@
  * zur Foerderung der angewandten Forschung e.V.
  *
  *****************************************************************************/
+
+ .fhg-main-page {
+    display: flex;
+    flex-direction: column;
+    position: absolute !important;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+ }
+ 
+.fhg-main-navbar {
+    grid-area: navbar;
+    overflow: hidden;
+}
+
+.fhg-main-toolbar {
+    grid-area: toolbar;
+    overflow: hidden;
+}
+
+.fhg-main-content {
+    grid-area: content;
+    overflow: auto;
+}
+
+.fhg-main-statusbar {
+    grid-area: statusbar;
+    overflow: hidden;
+}
