--- a/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
@@ -24,7 +24,7 @@
     </thead>
     <tbody>
         @for (node of nodes(); track node.id) {
-        <tr [ngClass]="visualState(node)" [id]="node.id">
+        <tr [ngClass]="visualState(node)" [id]="node.id" (click)="highlight(node)">
             <td>
                 <input type="checkbox" class="form-check-input" (change)="toggleSelection(node)"
                     [checked]="node.selected" [disabled]="state() === 'online'" />
