--- a/projects/aas-portal/src/app/start/start.component.html
+++ b/projects/aas-portal/src/app/start/start.component.html
@@ -6,13 +6,13 @@
  !
  !---------------------------------------------------------------------------->
 
-<div id="start-container" class="container-fluid">
+<div id="start-container" class="overflow-auto h-100 px-2">
     <fhg-aas-table [documents]="documents()" [viewMode]="viewMode()" [(selected)]="selected"
         [filter]="filter()"></fhg-aas-table>
 </div>
 
 <ng-template #startToolbar>
-    <div class="input-group me-2">
+    <div class="input-group me-2 my-1">
         <button class="btn btn-outline-primary" type="button" (click)="addToFavorites().subscribe()">
             <i class="bi bi-star"></i>
         </button>
@@ -29,7 +29,7 @@
         </select>
     </div>
     @if (activeFavorites() === '') {
-    <div class="input-group me-2">
+    <div class="input-group me-2 my-1">
         <button type="button" class="btn btn-primary" (click)="firstPage()" [disabled]="isFirstPage()">
             <i class="bi bi-chevron-bar-left"></i>
         </button>
@@ -50,7 +50,7 @@
             <i class="bi bi-chevron-bar-right"></i>
         </button>
     </div>
-    <div class="btn-group me-2">
+    <div class="btn-group me-2 my-1">
         <button type="button" class="btn btn-primary position-relative" (click)="refreshPage()">
             <i class="bi bi-arrow-clockwise"></i>
             <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-info">
@@ -59,7 +59,7 @@
         </button>
     </div>
     }
-    <div class="btn-group me-2">
+    <div class="btn-group me-2 my-1">
         <div ngbDropdown class="btn-group" role="group">
             <button type="button" class="btn btn-primary" ngbDropdownToggle id="menuEndpoints">
                 <i class="bi bi-gear"></i>
@@ -71,7 +71,7 @@
             </div>
         </div>
     </div>
-    <div class="btn-group me-2">
+    <div class="btn-group me-2 my-1">
         <button type="button" class="btn btn-primary" (click)="uploadDocument().subscribe()">
             <i class="bi bi-upload"></i>
         </button>
@@ -84,7 +84,7 @@
             <i class="bi bi-trash"></i>
         </button>
     </div>
-    <div class="btn-group me-2" id="viewModeGroup">
+    <div class="btn-group me-2 my-1" id="viewModeGroup">
         <input type="radio" [value]="'list'" class="btn-check" id="viewModeList" name="viewModeGroup" autocomplete="off"
             (change)="setViewMode('list')" [checked]="viewMode() === 'list'">
         <label class="btn btn-primary" for="viewModeList">
@@ -96,7 +96,7 @@
             <i class="bi bi-diagram-3"></i>
         </label>
     </div>
-    <div class="btn-group me-2">
+    <div class="btn-group me-2 my-1">
         <div ngbDropdown class="btn-group" role="group">
             <button type="button" class="btn btn-primary" ngbDropdownToggle id="selectEndpoints"
                 translate>LABEL_VIEWS</button>
@@ -108,7 +108,7 @@
             </div>
         </div>
     </div>
-    <div class="input-group flex-grow-1 me-2">
+    <div class="input-group flex-grow-1 me-2 my-1">
         <div class="input-group-text">
             <i class="bi bi-filter"></i>
         </div>
