--- a/projects/aas-portal/src/app/view/view.component.html
+++ b/projects/aas-portal/src/app/view/view.component.html
@@ -6,7 +6,7 @@
  !
  !---------------------------------------------------------------------------->
 
-<div class="container-fluid">
+<div class="h-100">
     @switch (template()) {
     @case('Nameplate'){
     <fhg-digital-nameplate [submodels]="submodels()"></fhg-digital-nameplate>
