--- a/projects/aas-portal/src/app/aas/aas.component.html
+++ b/projects/aas-portal/src/app/aas/aas.component.html
@@ -6,16 +6,16 @@
  !
  !---------------------------------------------------------------------------->
 
-<div id="aas-container" class="container-fluid">
-    @if (document()) {
-    <div class="row mt-1">
+<div class="fhg-aas-container px-2">
+    @if(document()) {
+    <div class="fhg-aas-header">
         <div class="d-flex flex-row">
             <div class="border border-secondary rounded p-1">
                 <fhg-img [height]="88" [width]="88" [src]="thumbnail()" alt="assets/resources/aas.svg" />
             </div>
             <div class="d-flex flex-row ps-1">
                 <div class="d-flex flex-column">
-                    <div class="fw-bold text-end small text-nowrap" translate>LABEL_ENDPOINT</div>
+                    <div class="fw-bold text-end small text-nowrap" translate>LABEL_ADDRESS</div>
                     <div class="fw-bold text-end small text-nowrap" translate>LABEL_AAS_ID_SHORT</div>
                     <div class="fw-bold text-end small text-nowrap" translate>LABEL_AAS_ID</div>
                     <div class="fw-bold text-end small text-nowrap" translate>LABEL_VERSION</div>
@@ -32,15 +32,18 @@
         </div>
     </div>
     }
-    <div class="row">
+    <div class="fhg-aas-document">
         <fhg-aas-tree #aasTree [state]="state()" [searchExpression]="searchExpression()" [document]="document()"
             (selected)="selectedElements.set($event)">
         </fhg-aas-tree>
     </div>
+    <div class="fhg-aas-properties">
+        <fhg-aas-property-grid></fhg-aas-property-grid>
+    </div>
 </div>
 
 <ng-template #aasToolbar>
-    <div class="btn-group me-2">
+    <div class="btn-group me-2 my-1">
         <button type="button" class="btn btn-primary" (click)="play()" [disabled]="canPlay() === false">
             <i class="bi bi-play-fill"></i>
         </button>
@@ -48,7 +51,7 @@
             <i class="bi bi-stop-fill"></i>
         </button>
     </div>
-    <div class="input-group me-2">
+    <div class="input-group me-2 my-1">
         <select #select class="form-select" [value]="dashboardPage()"
             (change)="setDashboardPage(dashboardPages()[select.selectedIndex])">
             @for (page of dashboardPages(); track page.name) {
@@ -64,18 +67,18 @@
             <i class="bi bi-bar-chart-line-fill"></i>
         </button>
     </div>
-    <div class="btn-group me-2" [hidden]="readOnly()">
+    <div class="btn-group me-2 my-1" [hidden]="readOnly()">
         <button type="button" class="btn btn-primary" (click)="synchronize().subscribe()"
             [disabled]="canSynchronize() === false">
             <i class="bi bi-arrow-repeat"></i>
         </button>
     </div>
-    <div class="btn-group me-2">
+    <div class="btn-group me-2 my-1">
         <button type="button" class="btn btn-primary" (click)="downloadDocument().subscribe()">
             <i class="bi bi-download"></i>
         </button>
     </div>
-    <div class="btn-group me-2" [hidden]="readOnly()">
+    <div class="btn-group me-2 my-1" [hidden]="readOnly()">
         <button type="button" class="btn btn-primary" (click)="undo()" [disabled]="canUndo() === false">
             <i class="bi bi-arrow-counterclockwise"></i>
         </button>
@@ -83,7 +86,7 @@
             <i class="bi bi-arrow-clockwise"></i>
         </button>
     </div>
-    <div class="btn-group me-2" [hidden]="readOnly()">
+    <div class="btn-group me-2 my-1" [hidden]="readOnly()">
         <button type="button" class="btn btn-primary" (click)="newElement().subscribe()" [disabled]="!canNewElement()">
             <i class="bi bi-plus-lg"></i>
         </button>
@@ -96,7 +99,7 @@
             <i class="bi bi-trash"></i>
         </button>
     </div>
-    <div class="input-group flex-grow-1 me-2">
+    <div class="input-group flex-grow-1 me-2 my-1">
         <div class="input-group-text"><i class="bi bi-search"></i></div>
         <input #textInput type="text" class="form-control" [value]="searchExpression()"
             [placeholder]="'PLACEHOLDER_FILTER' | translate" (input)="searchExpressionChange(textInput.value)">
