--- a/projects/aas-portal/src/app/aas/aas.component.scss
+++ b/projects/aas-portal/src/app/aas/aas.component.scss
@@ -6,12 +6,26 @@
  *
  *****************************************************************************/
 
-.hyperlink{
-    color: blue;
-    text-decoration: underline;
-    cursor: pointer;
-}
+ .fhg-aas-container {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto 1fr;
+    grid-template-areas: "header header" "document properties";
+ }
 
-.aasComponentClickButtons:focus, .aasComponentClickButtons:active{
-    box-shadow: none;
-} 
+ .fhg-aas-header {
+    grid-area: header;
+    overflow: hidden;
+ }
+
+ .fhg-aas-document {
+    grid-area: document;
+    overflow: auto;
+ }
+
+ .fhg-aas-properties {
+    grid-area: properties;
+    overflow: auto;
+}
