--- a/projects/aas-portal/src/app/aas/aas.component.html
+++ b/projects/aas-portal/src/app/aas/aas.component.html
@@ -38,7 +38,7 @@
         </fhg-aas-tree>
     </div>
     <div class="fhg-aas-properties">
-        <fhg-aas-property-grid></fhg-aas-property-grid>
+        <fhg-aas-property-grid [referable]="aasTree.highlighted()"></fhg-aas-property-grid>
     </div>
 </div>
 
