--- a/projects/aas-portal/src/app/main/main.component.html
+++ b/projects/aas-portal/src/app/main/main.component.html
@@ -44,7 +44,7 @@
         <router-outlet></router-outlet>
     </div>
     <div class="fhg-main-statusbar d-flex flex-row-reverse p-2">
-        <div class="ts-x-small">AASPortal v{{version()}} © 2024 Fraunhofer IOSB-INA</div>
+        <div class="ts-x-small">© 2024 Fraunhofer IOSB-INA - AASPortal (v{{version()}})</div>
     </div>
 </div>
 
