--- a/projects/aas-lib/src/lib/aas-property-grid/aas-property-grid.component.html
+++ b/projects/aas-lib/src/lib/aas-property-grid/aas-property-grid.component.html
@@ -1,1 +1,12 @@
-<p>aas-property-grid works!</p>
+@if (referable()) {
+<table>
+    @for (item of items(); track item.name) {
+    <tr>
+        <td>{{item.name}}</td>
+        <td>{{item.value}}</td>
+    </tr>
+    }
+</table>
+} @else {
+<div class="alert alert-info text-center mt-2" role="alert">{{'INFO_NO_REFERABLE_SELECTED' | translate}}</div>
+}
