--- a/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
@@ -19,7 +19,9 @@
                     <i class="bi bi-dash-square-dotted"></i>
                 </a>
             </th>
+            @if (state() === 'online') {
             <th></th>
+            }
         </tr>
     </thead>
     <tbody>
@@ -29,7 +31,7 @@
                 <input type="checkbox" class="form-check-input" (change)="toggleSelection(node)"
                     [checked]="node.selected" [disabled]="state() === 'online'" />
             </td>
-            <td [colSpan]="node.isLeaf ? 1 : 2">
+            <td>
                 <div class="d-flex" style="overflow-x: hidden">
                     <div [ngStyle]="{'width': (node.level * 16) + 'px'}"></div>
                     @if (node.isLeaf) {
@@ -60,62 +62,12 @@
                         {{node.abbreviation}}</div>
 
                     <div class="ms-1 flex-grow-1 text-nowrap">
-                        @if (node.hasSemantic) {
-                        <a (click)="openSubmodel(node.submodel)" href="javascript:void(0);">{{node.name}}</a>
-                        }@else {
                         <b>{{node.name}}</b>
-                        }
-                        <span class="text-secondary">&nbsp;[</span>
-                        <span class="text-secondary text-nowrap">{{node.typeInfo}}</span>
-                        <span class="text-secondary">]</span>
                     </div>
                 </div>
             </td>
-            @if (node.isLeaf) {
-            <td class="text-end">
-                @switch(node.element.modelType) {
-                @case ('AnnotatedRelationshipElement') {
-                <div class="d-flex flex-column ts-x-small me-2">
-                    <a href="javascript:void(0);" class="text-nowrap"
-                        (click)="openReference(node.annotatedRelationship?.first)">{{toString(node.annotatedRelationship?.first)}}</a>
-                    <a href="javascript:void(0);" class="text-nowrap"
-                        (click)="openReference(node.annotatedRelationship?.second)">{{toString(node.annotatedRelationship?.second)}}</a>
-                </div>
-                }
-                @case ('Blob') {
-                <a href="javascript:void(0);" class="text-nowrap me-2" (click)="openBlob(node.blob)">{{node.value}}</a>
-                }
-                @case('Entity') {
-                <a href="javascript:void(0);" class="text-nowrap me-2"
-                    (click)="openReference(node.entity?.globalAssetId)">{{node.value}}</a>
-                }
-                @case ('File') {
-                <a href="javascript:void(0);" class="text-nowrap me-2" (click)="openFile(node.file)">{{node.value}}</a>
-                }
-                @case ('Operation') {
-                <a href="javascript:void(0);" class="text-nowrap me-2"
-                    (click)="openOperation(node.operation)">{{node.value}}</a>
-                }
-                @case ('ReferenceElement') {
-                <a href="javascript:void(0);" class="text-nowrap me-2"
-                    (click)="openReference(node.reference?.value)">{{node.value}}</a>
-                }
-                @case ('RelationshipElement') {
-                <div class="d-flex flex-column ts-x-small me-2">
-                    <a href="javascript:void(0);" class="text-nowrap"
-                        (click)="openReference(node.relationship?.first)">{{toString(node.relationship?.first)}}</a>
-                    <a href="javascript:void(0);" class="text-nowrap"
-                        (click)="openReference(node.relationship?.second)">{{toString(node.relationship?.second)}}</a>
-                </div>
-                }
-                @case ('Submodel') {}
-                @case ('SubmodelElementCollection') {}
-                @case ('SubmodelElementList') {}
-                @default {
-                <div class="text-nowrap me-2">{{node.value}}</div>
-                }
-                }
-            </td>
+            @if (state() === 'online') {
+            <td>{{getValue(node)}}</td>
             }
         </tr>
         }
