--- a/projects/aas-portal/src/app/aas/aas.component.scss
+++ b/projects/aas-portal/src/app/aas/aas.component.scss
@@ -10,7 +10,7 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 50% 50%;
     grid-template-rows: auto 1fr;
     grid-template-areas: "header header" "document properties";
  }
